MD-A2-01: Complete header section

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -4,7 +4,13 @@
         "paths": {
             "@assets/*": ["assets/*"],
             "@constant": ["constant/index"],
-            "@theme": ["theme/index"]
+            "@theme": ["theme/index"],
+            "@components/*": ["components/index"],
+            "@containers/*": ["containers/index"],
+            "@hooks/*": ["hooks/index"],
+            "@layouts/*": ["layouts/index"],
+            "@pages/*": ["pages/index"],
+            "@contexts/*": ["contexts/index"]
         }
     }
 }
